<resources>
    <string name="app_name">Margh</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="share_quote">Share Quote</string>
    <string name="refresh_quotes">refresh quotes</string>
    <string name="random_quotes">Random quotes</string>
    <string name="quotes">quotes</string>
    <string name="name">Name</string>
    <string name="contact_us">Contact us</string>
    <string name="about_us">About us</string>
    <string name="logoout">LOGOOUT</string>
    <string name="share">Share</string>
    <string name="favorite_quotes">Favorite Quotes</string>
</resources>